@@ -26,5 +26,3 @@ options = {:id => element_form_id(:action => :add_existing),
   </p>
 
 </form>
-<%= javascript_tag("ActiveScaffold.focus_first_element_of_form('#{element_form_id(:action => :add_existing)}');") %>
-
