@@ -29,4 +29,3 @@ form_tag url_options, options %>
     <%= loading_indicator_tag(:action => :search) %>
   </p>
 </form>
-<%= javascript_tag("ActiveScaffold.focus_first_element_of_form('#{element_form_id(:action => 'search')}');") %>
