@@ -1,6 +1,7 @@
 = 3.4.0 (not released yet)
 - Support rails4
 - Quote selected columns
+- More unobtrusive html views
 
 = 3.3.3
 - Allow to override select options in active_scaffold_search_select
